--- a/style.css
+++ b/style.css
@@ -9,8 +9,8 @@ body {
     font-family: "Cairo", sans-serif;
 }
 .box{
-    padding: 15px 20px;
-    width:  100%;
+/*     padding: 15px 20px;*/
+    width:  100%; 
     background: #fff;
     
 }
