--- a/style.css
+++ b/style.css
@@ -96,19 +96,26 @@ box .flex .c-img img{
 .box .img2 {
     background: #c1ffda;
 }
+
 .box .foter{
     display: flex;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
+    border: 2px solid rgb(231 60 16);
+    padding: 15px 0;
+    border-bottom-left-radius:20px;
+    border-top-left-radius:20px;
+    border-top-right-radius:20px;
 }
+
 .box .foter img{
-    width: 200px;
+    width: 250px;
+    margin: 10px auto;
 }
 .box .foter p{
-    width: 320px;
-    padding: 0 30px;
-
+    width: 250px;
+    padding: 0 20px 0 0;
 }
 
 
